# financrr-app

./: .gitattributes  README.md
backend/: .dockerignore  .env.dist  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  compose.yml  dev.Dockerfile  rust-toolchain.toml  rustfmt.toml
backend/.cargo/: config.toml
backend/.config/: nextest.toml
backend/config/: development.yaml  docker.yaml  test.yaml
backend/docker/: Dockerfile
backend/docker/rust/: Dockerfile
backend/examples/: playground.rs
backend/financrr_macros/: Cargo.toml
backend/financrr_macros/src/: lib.rs
backend/financrr_macros_impl/: Cargo.toml
backend/financrr_macros_impl/src/: lib.rs
backend/financrr_macros_impl/src/impls/: app_errors.rs
backend/financrr_macros_impl/src/utils/: mod.rs  parsing.rs  string.rs
backend/migration/: Cargo.toml
backend/migration/src/: initial_schema.sql  lib.rs  m20220101_000001_users.rs  m20241126_123847_initial_schema.rs  unique_currency_data.json
backend/requests/: .gitignore  go-cardless.http  http-client.env.json
backend/src/: app.rs  constants.rs  lib.rs
backend/src/bank_account_linking/: accounts.rs  agreements.rs  client.rs  constants.rs  institutions.rs  mod.rs  requisitions.rs  responses.rs
backend/src/bank_data_importer/: mod.rs
backend/src/controllers/: auth.rs  bank_account_linking.rs  bank_data_importer.rs  external_bank_institutions.rs  go_cardless.rs  mod.rs  openapi.rs  session.rs  status.rs  user.rs
backend/src/error/: app_error.rs  error_code.rs  mod.rs
backend/src/factories/: bank_account_factory.rs  mod.rs
backend/src/fixtures/: admin.rs  currency.rs  mod.rs
backend/src/fixtures/system/: fixture_executor.rs  mod.rs
backend/src/initializers/: context.rs  fixtures.rs  mod.rs  openapi.rs  opensearch.rs  path_normalization.rs  services.rs
backend/src/initializers/opensearch_migrations/: mod.rs  version_02022025.rs
backend/src/mailers/: auth.rs
backend/src/middlewares/: authentication.rs
backend/src/models/: bank_accounts.rs  budget_criteria.rs  budget_criteria_bank_accounts.rs  budget_criteria_categories.rs  budget_criteria_external_bank_accounts.rs  budget_criteria_tags.rs  budget_histories.rs  budgets.rs  categories.rs  contracts.rs  currencies.rs  external_bank_account_ibans.rs  external_bank_accounts.rs  external_bank_institutions.rs  file_attachments.rs  fixtures.rs  go_cardless_enduser_agreements.rs  go_cardless_requisitions.rs  imported_bank_accounts.rs  inactive_contracts.rs  instances.rs  linked_back_accounts.rs  mod.rs  opensearch_migrations.rs  pending_transactions.rs  recurring_transactions.rs  sessions.rs  taggings.rs  tags.rs  transaction_parties.rs  transaction_templates.rs  transactions.rs  user_permissions.rs  users.rs
backend/src/models/_entities/: bank_accounts.rs  budget_criteria.rs  budget_criteria_bank_accounts.rs  budget_criteria_categories.rs  budget_criteria_external_bank_accounts.rs  budget_criteria_tags.rs  budget_histories.rs  budgets.rs  categories.rs  contracts.rs  currencies.rs  external_bank_account_ibans.rs  external_bank_accounts.rs  external_bank_institutions.rs  file_attachments.rs  fixtures.rs  go_cardless_enduser_agreements.rs  go_cardless_requisitions.rs  imported_bank_accounts.rs  inactive_contracts.rs  instances.rs  linked_back_accounts.rs  mod.rs  opensearch_migrations.rs  pending_transactions.rs  prelude.rs  recurring_transactions.rs  sea_orm_active_enums.rs  sessions.rs  taggings.rs  tags.rs  transaction_parties.rs  transaction_templates.rs  transactions.rs  user_permissions.rs  users.rs
backend/src/opensearch/: indices.rs  mod.rs
backend/src/opensearch/mappings/: external_bank_institutions.json
backend/src/opensearch/migration_system/: migrator.rs  mod.rs
backend/src/opensearch/models/: external_bank_institutions.rs  mod.rs
backend/src/services/: bank_linking_data.rs  custom_config.rs  instance_handler.rs  mod.rs  secret_generator.rs  snowflake_generator.rs  status_service.rs  user_verification.rs
backend/src/services/custom_configs/: bank_account_linking.rs  bank_data_linking.rs  base.rs  mod.rs  opensearch.rs
backend/src/services/opensearch/: client.rs
backend/src/tasks/: check_health.rs  clean_up_requisitions.rs  cleanup_instances.rs  mod.rs  seed.rs  sync_institutions.rs
backend/src/types/: mod.rs  snowflake.rs
backend/src/utils/: context.rs  datetime.rs  env.rs  folder.rs  mod.rs  routes.rs  type_name.rs
backend/src/validation/: mod.rs  user.rs
backend/src/views/: auth.rs  bank_account_linking.rs  external_bank_institutions.rs  go_cardless.rs  mod.rs  pagination.rs  session.rs  status.rs  user.rs
backend/src/workers/: clean_up_external_institutions.rs  mod.rs  session_used.rs  sync_go_cardless_institutions.rs
backend/src/workers/external_bank_institutions/: add_to_index.rs  clean_up.rs  delete_from_index.rs  index_external_institutions.rs  mod.rs  sync_go_cardless_institutions.rs
backend/src/workers/go_cardless/: mod.rs  sync_account_data.rs
backend/tests/: mod.rs
backend/tests/helpers/: external_institutions.rs  faker.rs  init.rs  mod.rs  session.rs  users.rs
backend/tests/models/: currencies.rs  instances.rs  mod.rs  users.rs
backend/tests/models/snapshots/: can_create_maximum_instances@instances.snap  (+8 more)
backend/tests/requests/: auth.rs  external_bank_institutions.rs  mod.rs  openapi.rs  path_normaliztation.rs  prepare_data.rs  session.rs  user.rs
backend/tests/tasks/: check_health.rs  cleanup_instances.rs  mod.rs  seed.rs  sync_go_cardless_institutions.rs  sync_institutions.rs
backend/tests/workers/: clean_up_external_institutions.rs  go_cardless_institutions.json  mod.rs  session_used.rs  sync_go_cardless_institutions.rs
new-backend/: .env.dist  .gitignore  Cargo.toml  compose.yml  schema.sql
new-backend/config/: development.yaml  docker.yaml  test.yaml
new-backend/examples/: playground.rs
new-backend/migration/: Cargo.toml
new-backend/src/: app.rs
new-backend/src/models/: users.rs
new-backend/tests/models/: users.rs
new-backend/tests/requests/: auth.rs  prepare_data.rs
new-backend/tests/tasks/: seed.rs
(+83 files in other folders)
