[workspace]
members = [
    "migration",
    "financrr_macros",
    "financrr_macros_impl"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[package]
name = "financrr"
version.workspace = true
edition.workspace = true
publish.workspace = true
default-run = "financrr-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.lints.rust]
# Forbid
unsafe_code = "forbid"
non_ascii_idents = "forbid"

[package.metadata.cargo-machete]
ignored = ["include_dir"]

[workspace.dependencies]
#loco-rs = { version = "0.14.0", features = ["with-db", "cache_inmem"] }
loco-rs = { git = "https://github.com/loco-rs/loco", branch = "master", features = ["with-db", "cache_inmem"] }
financrr_macros = { path = "financrr_macros" }

[dependencies]
# Loco Framework
loco-rs = { workspace = true }
async-trait = "0.1.85"

# Axum
axum = { version = "0.8.1", features = ["json", "tokio"] }

# Tower
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["normalize-path", "compression-full", "async-compression"] }

# Database and ORM
sea-orm = { version = "1.1.4", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
migration = { path = "migration" }

# Async runtime and scheduler
tokio = { version = "1.43.0", default-features = false, features = [
    "rt-multi-thread",
    "parking_lot"
] }
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }

# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yml = "0.0.12"
# Old/archived serde_yaml because loco uses is
serde_yaml = "0.9.34"

# Template engine
tera = "1.20.0"

# Utoipa / OpenApi
utoipa = { version = "5.3.1", features = [
    "axum_extras",
    "openapi_extensions",
    "yaml",
    "preserve_order",
    "preserve_path_order",
    "non_strict_integers",
    "chrono"
] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "debug-embed"] }
utoipauto = "0.2.0"

# Logging
tracing = "0.1.41"

# Time
chrono = { version = "0.4.39", features = ["clock"] }

# Flags
enumflags2 = { version = "0.7.11", features = ["std", "serde"] }

# Validation
validator = { version = "0.20.0" }

# Env loading
dotenvy = "0.15.7"

# Mimalloc for better performance (eg. Alpine)
mimalloc = "0.1.43"

# Derive and Error utils
thiserror = "2.0.11"
derive_more = { version = "1.0.0", features = ["display", "error"] }

# File utils
include_dir = "0.7.4"
bytes = "1.9.0"

# Tokene genration
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.1"

# Code generation/custom macros
financrr_macros.workspace = true

[[bin]]
name = "financrr-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
# Loco
loco-rs = { workspace = true, features = ["testing"] }

# Testing frameworks
serial_test = "3.2.0"
rstest = "0.24.0"
insta = { version = "1.42.0", features = ["serde", "redactions", "yaml", "filters", "json"] }

# Utils
tempfile = "3.15.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.test.package.insta]
opt-level = 3

[profile.test.package.similar]
opt-level = 3