[workspace]

[package]
name = "financrr"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "financrr-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.13.1" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = "0.1.83"
axum = "0.7.9"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
migration = { path = "migration" }
sea-orm = { version = "1.1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = "0.4.38"
validator = { version = "0.18" }
uuid = { version = "1.11.0", features = ["v4"] }
include_dir = "0.7.4"
dotenvy = "0.15.7"

# Mimalloc for better performance (eg. Alpine)
mimalloc = "0.1.43"

[[bin]]
name = "financrr-cli"
path = "src/bin/main.rs"
required-features = []

[[bin]]
name = "tool"
path = "src/bin/tool.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = "3.2.0"
rstest = "0.23.0"
insta = { version = "1.41.1", features = ["redactions", "yaml", "filters"] }
