[package]
name = "migration"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
# Loco Framework
loco-rs = { workspace = true }

# SeaORM
sea-orm-migration = { version = "1.1.3", features = ["runtime-tokio-rustls"] }
